--- a/exampleSite/config/_default/params.toml
+++ b/exampleSite/config/_default/params.toml
@@ -1,4 +1,6 @@
 #################### default parameters ################################
+#assets
+assetPath = "assets/"
 # favicon
 favicon = "images/favicon.png"
 # logo
