--- a/exampleSite/config/_default/menus.toml
+++ b/exampleSite/config/_default/menus.toml
@@ -5,31 +5,31 @@ url = ""
 weight = 1
 
 [[main]]
-name = "About"
+name = "Why Nelson"
 url = "about/"
 weight = 2
 
 [[main]]
-name = "Blog"
+name = "Testimonials"
 url = "blog/"
 weight = 3
 
-[[main]]
-weight = 4
-name = "Pages"
-hasChildren = true
+#[[main]]
+#weight = 4
+#name = "Pages"
+#hasChildren = true
 
-  [[main]]
-  parent = "Pages"
-  name = "Blog Details"
-  url = "blog/post-1/"
-  weight = 1
+#  [[main]]
+#  parent = "Pages"
+#  name = "Blog Details"
+#  url = "blog/post-1/"
+#  weight = 1
 
-  [[main]]
-  parent = "Pages"
-  name = "Terms & Conditions"
-  url = "terms-and-conditions/"
-  weight = 7
+#  [[main]]
+#  parent = "Pages"
+#  name = "Terms & Conditions"
+#  url = "terms-and-conditions/"
+#  weight = 7
   
 [[main]]
 name = "Contact"
