--- a/theme.toml
+++ b/theme.toml
@@ -2,8 +2,8 @@ name = "Andromeda Light"
 license = "MIT"
 licenselink = "https://github.com/gethugothemes/andromeda-light/blob/master/LICENSE"
 description = "Andromeda is a SAAS landing template focused on real life usages and clean interface. It is fully responsive, Super fast and powered by Bootstrap. Also we make it SEO friendly."
-homepage = "https://github.com/gethugothemes/andromeda-light/"
-demosite = "https://demo.gethugothemes.com/andromeda-light/"
+homepage = "https://storage.googleapis.com/nelson-brochure/"
+demosite = "https://storage.googleapis.com/nelson-brochure/"
 tags = ['blog', 'light', 'bootstrap', "company", 'responsive', 'contact-form']
 features = ['responsive']
 min_version = "0.83.1"
