Menu links with index.html (temp), bump hugo v
Signed-off-by: magumbo <loz.tunnicliffe@gmail.com>

--- a/exampleSite/config/_default/config.toml
+++ b/exampleSite/config/_default/config.toml
@@ -1,7 +1,7 @@
 ######################## default configuration ####################
 baseURL = "https://storage.googleapis.com/nelson-brochure/"
 title = "Nelson - Operating System For A New Breed Of Hotels"
-theme = "nelson-brochure"
+theme = "andromeda-light"
 # post pagination
 paginate = "6"
 # post excerpt
