--- a/exampleSite/config/_default/menus.toml
+++ b/exampleSite/config/_default/menus.toml
@@ -6,12 +6,12 @@ weight = 1
 
 [[main]]
 name = "Why Nelson"
-url = "about/"
+url = "about/index.html"
 weight = 2
 
 [[main]]
 name = "Testimonials"
-url = "blog/"
+url = "blog/index.html"
 weight = 3
 
 #[[main]]
@@ -33,19 +33,19 @@ weight = 3
   
 [[main]]
 name = "Contact"
-url = "contact/"
+url = "contact/index.html"
 weight = 5
 
 
 # footer menu
 [[footer]]
 name = "About"
-url = "about/"
+url = "about/index.html"
 weight = 1
 
 [[footer]]
 name = "Blog"
-url = "blog/"
+url = "blog/index.html"
 weight = 2
 
 [[footer]]
@@ -55,5 +55,5 @@ weight = 3
 
 [[footer]]
 name = "Terms & Conditions"
-url = "terms-and-conditions/"
+url = "terms-and-conditions/index.html"
 weight = 4
