--- a/config.toml
+++ b/config.toml
@@ -12,6 +12,7 @@ white = "#ffffff"
 black = "#000000"
 light = "#FAFAFA"
 primary_color = "#FE6019"
+#primary_color = "#2F635E" green
 
 # font variable
 h1 = "48px"
