--- a/config.toml
+++ b/config.toml
@@ -7,12 +7,16 @@
 
 ######################### site variables ##############################
 # customize your color and font from here.
+
+
+# Superceeded? 
+
 [params.variables]
 white = "#ffffff"
 black = "#000000"
 light = "#FAFAFA"
-#primary_color = "#FE6019"
-primary_color = "#2D635E"
+primary_color = "#FE6019"
+#primary_color = "#2D635E"
 
 # font variable
 h1 = "48px"
