--- a/exampleSite/config/_default/config.toml
+++ b/exampleSite/config/_default/config.toml
@@ -17,7 +17,8 @@ disqusShortname = "themefisher-template" # get your shortname form here : https:
 white = "#ffffff"
 grey = "#F8F7F2"
 black = "#000000"
-light = "#ECF598"
+#light = "#ECF598" yellow
+light = "#ffffff"
 #primary_color = "#FE6019"
 primary_color = "#2D635E"
 
